# ccc-assistant

./: README.md  pyproject.toml
.github/workflows/: when_pull_request.yaml  when_tagged.yaml
ccc_assistant/: bot.py  cog.py  config.py  misc.py
debian/ccc-assistant/DEBIAN/: control
tests/: test_image_extractions.py
