[tool.poetry]
name = "ccc-assistant"
version = "0.0.0"
description = ""
authors = ["NargiT <3153333+NargiT@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ccc_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.4.1"


[tool.poetry.group.dev.dependencies]
nuitka = "^1.5.6"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
